--- a/meta.yaml
+++ b/meta.yaml
@@ -42,6 +42,7 @@ requirements:
     - scoop
     - setuptools
     - xlwt
+    - pandas
 
   run:
     - argparse # [py26]
@@ -77,6 +78,7 @@ requirements:
     - scoop
     - symmetry
     - xlwt
+    - pandas
 
 test:
   requires:
